ingress-patching/deployment-frontend-apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-apache
spec:
  selector:
    matchLabels:
      app: hello-apache
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-apache
        tier: frontend
        track: stable
    spec:
      containers:
        - name: nginx
          image: "kost13/apache-front-test"
