ingress-patching/service-frontend-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx
spec:
  selector:
    app: hello-nginx
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: NodePort
